Added NCS 24/7, fixed Monstercat FM URL

--- a/new_liptv.html
+++ b/new_liptv.html
@@ -125,7 +125,7 @@ Tim = "https://www.youtube.com/embed/videoseries?list=UUDYmrqySCqrHnah4LNUPt4w&a
 Track = "https://www.youtube.com/embed/videoseries?list=UUjjQMyVYBxX9mTlC-Q1Wehw&autoplay=1;hl=en_US"
 TRMS = "https://www.youtube.com/embed/videoseries?list=UU4zeetgY4k2th5a3aLYn1JQ&autoplay=1;hl=en_US"
 FNT = "http://video.foxnews.com/v/video-embed.html?video_id=2013931500001"
-Cat = "https://www.youtube.com/embed/xJ6IoIBohbM?autoplay=1"
+Cat = "https://www.youtube.com/embed/-T1H39aSWMM?autoplay=1"
 Repor = "http://www.dailymotion.com/widget/jukebox?list[]=/user/dmdm1576&autoplay=1"
 Nightly = "https://www.youtube.com/embed/videoseries?list=PLD7nPL1U-R5r4rnyxaVvZyPRUecK_vWgV&autoplay=1"
 ESPN = "https://www.youtube.com/embed/videoseries?list=UUiWLfSweyRNmLpgEHekhoAg&autoplay=1;hl=en_US"
@@ -134,6 +134,7 @@ TTV = "https://www.youtube.com/embed/videoseries?list=UUHbcwfjBn2P_6GHw5ottF5A&a
 Lego = "https://www.youtube.com/embed/videoseries?list=UUP-Ng5SXUEt0VE-TXqRdL6g&autoplay=1;hl=en_US"
 FK = "https://www.youtube.com/embed/videoseries?list=UUdk5Rgx0GXlpSqKrWuf-TKA&autoplay=1;hl=en_US"
 SMK = "https://www.youtube.com/embed/videoseries?list=UU4MrFxMk7nYlLGnpAtTz-uw&autoplay=1;hl=en_US"
+NCS = "https://www.youtube.com/embed/1-AODuJpCG4?autoplay=1"
 big_square1 = document.getElementsByTagName("big_square1");
 big_square1_img = big_square1[0].getElementsByTagName("img");
 big_square2 = document.getElementsByTagName("big_square2");
@@ -395,22 +396,23 @@ function Boxes(type) {
 		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 1)
 		SetSquare("<a href='javascript:Do_Lego()'>Lego</a>", "Lego.png", 2)
 		
-		SetSquare("<a href='javascript:Do_TTV()'><white>TTV Channel</white<</a>", "TTV.png", 3)
-		SetSquare("<a href='javascript:Do_Lego()'>Lego</a>", "Lego.png", 4)
-		SetSquare("<a href='javascript:Do_FK()'>FK Films</a>", "FK.png", 5)
-		SetSquare("<a href='javascript:Do_SMK()'>Stop Motion King</a>", "SMK.png", 6)
-		SetSquare("<a href='javascript:Do_Crowder()'>Louder with Crowder</a>", "loud.png", 7)
-		SetSquare("<a href='javascript:Do_ESPNY()'>ESPN</a>", "espn.png", 8)
-		SetSquare("<a href='javascript:Do_Repor()'><white>Colbert Report</white></a>", "repor.jpg", 9)
-		SetSquare("<a href='javascript:Do_Nightly()'>The Nightly Show</a>", "nightly.png", 10)
-		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 11)
-		SetSquare("<a href='javascript:Do_FNT()'>Fox News Talk</a>", "fnt.jpg", 12)
-		SetSquare("<a href='javascript:Do_Track()'><white>Trackstarz</white></a>", "track.jpg", 13)
-		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 14)
-		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 15)
-		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 16)
-		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 17)
+		SetSquare("<a href='javascript:Do_NCS()'><white>NCS 24/7</white></a>", "NCS.png", 3)
+		SetSquare("<a href='javascript:Do_TTV()'><white>TTV Channel</white></a>", "TTV.png", 4)
+		SetSquare("<a href='javascript:Do_Lego()'>Lego</a>", "Lego.png", 5)
+		SetSquare("<a href='javascript:Do_FK()'>FK Films</a>", "FK.png", 6)
+		SetSquare("<a href='javascript:Do_SMK()'>Stop Motion King</a>", "SMK.png", 7)
+		SetSquare("<a href='javascript:Do_Crowder()'>Louder with Crowder</a>", "loud.png", 8)
+		SetSquare("<a href='javascript:Do_ESPNY()'>ESPN</a>", "espn.png", 9)
+		SetSquare("<a href='javascript:Do_Repor()'><white>Colbert Report</white></a>", "repor.jpg", 10)
+		SetSquare("<a href='javascript:Do_Nightly()'>The Nightly Show</a>", "nightly.png", 11)
+		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 12)
+		SetSquare("<a href='javascript:Do_FNT()'>Fox News Talk</a>", "fnt.jpg", 13)
+		SetSquare("<a href='javascript:Do_Track()'><white>Trackstarz</white></a>", "track.jpg", 14)
+		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 15)
+		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 16)
+		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 17)
 		
+		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 18)
 		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 18)
 		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 18)
 		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 18)
@@ -477,21 +479,22 @@ function Boxes(type) {
 	}
 	if(type == "live") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 3)
-		SetSquare("<a href='javascript:Do_FNT()'>Fox News Talk</a>", "fnt.jpg", 4)
-		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 5)
-		SetSquare("<a href='javascript:Do_Newsy()'>Newsy Live</a>", "newsy.jpg", 6)
-		SetSquare("<a href='javascript:Do_FNC3()'><white>Fox News Live Event 3</white></a>", "fncl.png", 7)
-		SetSquare("<a href='javascript:Do_FNC2()'><white>Fox News Live Event 2</white></a>", "fncl.png", 8)
-		SetSquare("<a href='javascript:Do_FNC1()'><white>Fox News Live Event</white></a>", "fncl.png", 9)
-		SetSquare("<a href='javascript:Do_DCTV()'><white>DiamondClub.TV</white></a>", "dctv.jpg", 10)
-		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 11)
-		SetSquare("<a href='javascript:Do_Eu()'><white>Euronews</white></a>", "eu.jpg", 12)
-		SetSquare("<a href='javascript:Do_Sky()'><white>Sky News</white></a>", "sky.jpg", 13)
-		SetSquare("<a href='javascript:Do_YTSports()'>YouTube Sports</a>", "ytsports.jpg", 14)
-		SetSquare("<a href='javascript:Do_YTLive()'>YouTube Live</a>", "youtube.jpg", 15)
-		SetSquare("<a href='javascript:Do_NFL()'><white>NFL Now Live</white></a>", "nfl.jpg", 16)
-		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 17)
+		SetSquare("<a href='javascript:Do_NCS()'><white>NCS 24/7</white></a>", "NCS.png", 3)
+		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 4)
+		SetSquare("<a href='javascript:Do_FNT()'>Fox News Talk</a>", "fnt.jpg", 5)
+		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 6)
+		SetSquare("<a href='javascript:Do_Newsy()'>Newsy Live</a>", "newsy.jpg", 7)
+		SetSquare("<a href='javascript:Do_FNC3()'><white>Fox News Live Event 3</white></a>", "fncl.png", 8)
+		SetSquare("<a href='javascript:Do_FNC2()'><white>Fox News Live Event 2</white></a>", "fncl.png", 9)
+		SetSquare("<a href='javascript:Do_FNC1()'><white>Fox News Live Event</white></a>", "fncl.png", 10)
+		SetSquare("<a href='javascript:Do_DCTV()'><white>DiamondClub.TV</white></a>", "dctv.jpg", 11)
+		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 12)
+		SetSquare("<a href='javascript:Do_Eu()'><white>Euronews</white></a>", "eu.jpg", 13)
+		SetSquare("<a href='javascript:Do_Sky()'><white>Sky News</white></a>", "sky.jpg", 14)
+		SetSquare("<a href='javascript:Do_YTSports()'>YouTube Sports</a>", "ytsports.jpg", 15)
+		SetSquare("<a href='javascript:Do_YTLive()'>YouTube Live</a>", "youtube.jpg", 16)
+		SetSquare("<a href='javascript:Do_NFL()'><white>NFL Now Live</white></a>", "nfl.jpg", 17)
+		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 18)
 		SetSquare("<a href='javascript:Do_NFL()'><white>NFL Now Live</white></a>", "nfl.jpg", 18)
 		SetSquare("<a href='javascript:Do_105()'>105.7 The Fan</a>", "1057.jpg", 18)
 		SetSquare("<a href='javascript:Do_106()'>106.7 The Fan</a>", "1067.jpg", 18)
@@ -505,21 +508,22 @@ function Boxes(type) {
 	}
 	if(type == "yt") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 3)
-		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 4)
-		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 5)
-		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 6)
-		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 7)
-		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 8)
-		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 9)
-		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 10)
-		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 11)
-		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 12)
-		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 13)
-		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 14)
-		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 15)
-		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 16)
-		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 17)
+		SetSquare("<a href='javascript:Do_NCS()'><white>NCS 24/7</white></a>", "NCS.png", 3)
+		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 4)
+		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 5)
+		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 6)
+		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 7)
+		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 8)
+		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 9)
+		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 10)
+		SetSquare("<a href='javascript:Do_YT()'>Youtube Spotlight</a>", "yt.jpg", 11)
+		SetSquare("<a href='javascript:Do_YTNews()'>Top Stories on Youtube</a>", "news.jpg", 12)
+		SetSquare("<a href='javascript:Do_YTGame()'>Youtube Gaming</a>", "gaming.jpg", 13)
+		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 14)
+		SetSquare("<a href='javascript:Do_YTPop()'>Popular Right Now on Youtube</a>", "pop.jpg", 15)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 16)
+		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 17)
+		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 18)
 		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 18)
 		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 18)
 		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 18)
@@ -591,21 +595,22 @@ function Boxes(type) {
 		}
 	if(type == "et") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 3)
-		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 4)
-		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 5)
-		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 6)
-		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 7)
-		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 8)
-		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 9)
-		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 10)
-		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 11)
-		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 12)
-		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 13)
-		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 14)
-		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 15)
-		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 16)
-		SetSquare("<a href='javascript:Do_AS()'><white>Adult Swim Live Stream</white></a>", "stream.png", 17)
+		SetSquare("<a href='javascript:Do_NCS()'><white>NCS 24/7</white></a>", "NCS.png", 3)
+		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 4)
+		SetSquare("<a href='javascript:Do_Tim()'><white>Tim Hawkins</white></a>", "tim.jpg", 5)
+		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 6)
+		SetSquare("<a href='javascript:Do_BYU()'>BYU TV</a>", "byu.jpg", 7)
+		SetSquare("<a href='javascript:Do_Coco()'><white>Conan</white></a>", "conan.jpg", 8)
+		SetSquare("<a href='javascript:Do_Bee()'>Full Frontal</a>", "b.jpg", 9)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 10)
+		SetSquare("<a href='javascript:Do_SNL()'>Saturday Night Live</a>", "snl.jpg", 11)
+		SetSquare("<a href='javascript:Do_Fallon()'><white>The Tonight Show</white></a>", "fallon.jpg", 12)
+		SetSquare("<a href='javascript:Do_Corden()'>The Late Late Show</a>", "corden.jpg", 13)
+		SetSquare("<a href='javascript:Do_Colbert()'>The Late Show</a>", "colbert.jpg", 14)
+		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 15)
+		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 16)
+		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 17)
+		SetSquare("<a href='javascript:Do_AS()'><white>Adult Swim Live Stream</white></a>", "stream.png", 18)
 		SetSquare("<a href='javascript:Do_Off()'>Off The Air</a>", "off.png", 18)
 		SetSquare("<a href='javascript:Do_Toonami()'><white>Toonami</white></a>", "toonami.png", 18)
 		SetSquare("<a href='javascript:Do_Anima()'>Animation 24/7</a>", "anima.png", 18)
@@ -656,12 +661,13 @@ function Boxes(type) {
 	}
 	if(type == "music") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 3)
-		SetSquare("<a href='javascript:Do_Track()'><white>Trackstarz</white></a>", "track.jpg", 4)
-		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 5)
-		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 6)
-		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 7)
-		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 8)
+		SetSquare("<a href='javascript:Do_NCS()'><white>NCS 24/7</white<</a>", "NCS.png", 3)
+		SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", 4)
+		SetSquare("<a href='javascript:Do_Track()'><white>Trackstarz</white></a>", "track.jpg", 5)
+		SetSquare("<a href='javascript:Do_Zil()'>Rapzilla</a>", "zil.jpg", 6)
+		SetSquare("<a href='javascript:Do_YTMusic()'>Popular Music Videos on Youtube</a>", "music.jpg", 7)
+		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 8)
+		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 9)
 	}
 	if(type == "ts") {
 		ClearBoxes()
@@ -1356,6 +1362,14 @@ function Do_Crowder() {
 	SetSquare("<a href='javascript:Do_FNC()'>Fox News</a>", "fnc.jpg", "sugg3")
 	SetSquare("<a href='javascript:Do_Sky()'><white>Sky News</white></a>", "sky.jpg", "sugg4")
 	SetSquare("<a href='javascript:Do_Newsmax()'>Newsmax TV</a>", "newsmax.jpg", "sugg5")
+}
+function Do_NCS() {
+	StartVideo(NCS)
+	SetSquare("<a href='javascript:Do_Cat()'><white>Monstercat FM</white></a>", "cat.jpg", "sugg1")
+	SetSquare("<a href='javascript:Do_FNC1()'><white>Fox News Live Event</white></a>", "fncl.png", "sugg2")
+	SetSquare("<a href='javascript:Do_Sky()'><white>Sky News</white></a>", "sky.jpg", "sugg3")
+	SetSquare("<a href='javascript:Do_Newsmax()'>Newsmax TV</a>", "newsmax.jpg", "sugg4")
+	SetSquare("<a href='javascript:Do_Undisputed()'><white>Undisputed</white></a>", "undisputed.jpg", "sugg5")
 }
 function SetGrid(how) {
 	if(how == "Live") {
